syntax = "proto3";

package dev.httpmarco.polocloud.v1.proto;

option java_package = "dev.httpmarco.polocloud.v1.stats";
option java_multiple_files = true;

service StatsController {
  rpc get(GetStatsRequest) returns (GetStatsResponse);
}

message GetStatsRequest {}

message GetStatsResponse {
  StatsSnapshot stats = 1;
}


message StatsSnapshot {
  int64 started = 1;
  string runtime = 2;
  string javaVersion = 3;
  double cpuUsage = 4;
  double usedMemory = 5;
  double maxMemory = 6;
  int32 subscribedEvents = 7;
}